fixed overflow on narrow screens

--- a/app/styles/_custom.scss
+++ b/app/styles/_custom.scss
@@ -84,13 +84,24 @@ main > header { @extend .header;
   margin-right: -15px;
   position: relative;
   border-bottom: 0;
-  h3 { @extend .text-muted;
-     margin-left: 1.5em;
-     padding: 21px;
+  div.navbar-brand.logo { @extend .text-muted;
+     margin-left: -15px;
+     margin-right: -15px;
+     padding: 0px;
+     padding-top: 5px;
+     padding-left: 5em;
+     height: auto;
+    overflow-x: hidden;
+    line-height: 1.1;
      a,a:hover,a:focus {
        color: #2f2f2f;
      }
-     span {
+    h3 {
+      display: inline-block;
+      margin-left: 1em;
+    }
+
+    h3 span {
           color: $duralumin-orange;
      }
   }
@@ -115,10 +126,9 @@ main > header > .main-logo {
   padding: 0;
 }
 
-.navbar-brand {
+.navbar-brand h3{
   font-size: 1.5em;
   font-weight: bold; // we don't have EB Garamond other than 400 normal/italic -- Does't matter - browser makes it bold
-  padding-left: 4.5em;
 }
 
 main > header > nav.navbar {
@@ -210,8 +220,9 @@ main > header > nav.navbar {
     background-color: $duralumin-black;
   }
 
-  .navbar-brand {
-    padding-left: 4.5em;
+  main > header div.navbar-brand.logo
+  {
+    padding-left: 7.5em
   }
 
   #upper-navbar {
