--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,23 +30,25 @@ body {
     padding-right: 15px;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
-}
 
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
+.header div.navbar-brand {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
+    float: none;
+    display: block;
+    h3 {
+      margin: 0;
+    }
     a {
         color: $muted_text_col;
         &:hover, &:focus{
           text-decoration: none;
         }
     }
+
 }
 
 /* Custom page footer */
